# bentoml-demo

./: README.md  pyproject.toml  test.py  train.py
src/: model_casual.pkl  model_registered.pkl  save.py
tests/: test_bentoml_demo.py
