[tool.poetry]
name = "bentoml-demo"
version = "0.1.0"
description = "demo ML project with deployment using bentoml"
authors = ["Valerii Chetvertakov"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20"
pandas = "1.4.2"
lightgbm = "^3.3.2"
bentoml = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
